# Exercicios_Python

./: EstudoGITHUB.ctx  LICENSE  README.md  Sorteio.py  app.py  pyproject.toml
Exercicios/: Sorteio.py  exe0201.py  exe0202.py  exe0203.py  exe0204.py
Exercicios/Python para Zumbis/Lista de exercícios 01/: exe0101.py  exe0102.py  exe0103.py  exe0104.py  exe0105.py  exe0106.py  exe0107.py  exe0108.py  exe0109.py  exe0110.py  exe0111.py
Exercicios/Python para Zumbis/Lista de exercícios 02/: exe0201.py  exe0202.py  exe0203.py  exe0204.py  exe0205.py  exe0206.py  exe0207.py
