[tool.poetry]
name = "Exercicios_Python"
version = "0.1.0"
description = "Pasta com exercícios do Python"
authors = ["ManoelSaraiva <manoeljsaraiva@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
