[tool.poetry]
name = "Exercicios_Python"
version = "0.1.0"
description = "Pasta com exercícios do Python"
authors = ["ManoelSaraiva <manoeljsaraiva@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
blue = "^0.9.1"
pytest = "^7.1.2"
mkdocs = "^1.3.1"
prospector = "^1.7.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
